# ecu-can-diagnostics

./: .gitignore  CMakeLists.txt  build_and_run.sh
common/: CMakeLists.txt
common/can/: CanFrame.hpp  CanIds.hpp  ICanDriver.hpp  SocketCanDriver.cpp  SocketCanDriver.hpp
common/diagnostic/: FaultType.hpp
common/rtos/: MessageQueue.hpp  Task.cpp  Task.hpp
ecu_simulator/: CMakeLists.txt  main.cpp
ecu_simulator/can/: SocketCanDriver.cpp  SocketCanDriver.hpp
ecu_simulator/ipc/: FaultIpcServer.cpp  FaultIpcServer.hpp
ecu_simulator/tasks/: CanRx.cpp  CanRx.hpp  CanTx.cpp  CanTx.hpp  Diagnostics.cpp  Diagnostics.hpp
qt_diagnostics/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
qt_diagnostics/backend/: CanBackendWorker.cpp  CanBackendWorker.hpp
qt_diagnostics/diagnostic/: QDiagnostics.cpp  QDiagnostics.hpp
qt_diagnostics/ipc/: FaultIpcClient.cpp  FaultIpcClient.hpp
qt_diagnostics/qt_types/: FaultTypeQt.hpp
qt_diagnostics/ui/: CanMonitorTab.cpp  CanMonitorTab.hpp  DiagnosticsTab.cpp  DiagnosticsTab.hpp  FaultInjectionTab.cpp  FaultInjectionTab.hpp
qt_diagnostics/ui/model/: CanMessage.hpp  CanTableModel.cpp  CanTableModel.hpp  DiagnosticEvent.hpp  DiagnosticModel.cpp  DiagnosticModel.hpp
